Fixed spacing for PrivacyPolicy page

--- a/frontend/src/components/PrivacyPolicyHeader/privacyPolicyHeader.css
+++ b/frontend/src/components/PrivacyPolicyHeader/privacyPolicyHeader.css
@@ -5,7 +5,7 @@
     background-color: #FFFFFF;
 
     padding-top: 180px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 .privacyPolicyHeaderContainer {
