--- a/frontend/src/components/PrivacyPolicyInfo/privacyPolicyInfo.css
+++ b/frontend/src/components/PrivacyPolicyInfo/privacyPolicyInfo.css
@@ -3,7 +3,7 @@
     height: 100%;
 
     background-color: #FFFFFF;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     padding-bottom: 100px;
 }
 
@@ -13,6 +13,7 @@
     margin-right: auto;
 
     height: 100%;
+    /* background-color: red; */
 }
 
 
@@ -38,7 +39,6 @@
 .privacyPolicyInfoAccordion {
   width: 100%;
   background: #fff;
-  border-radius: 8px 8px 0 0;
   margin-bottom: 0;
   box-shadow: none;
   overflow: visible;
@@ -50,7 +50,7 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  padding: 0 12px 0 12px;
+  /* padding: 0 12px 0 12px; */
   min-height: 60px;
   -webkit-user-select: none;
   user-select: none;
@@ -144,11 +144,11 @@
   to { opacity: 1; transform: translateY(0); }
 }
 .privacyPolicyInfoAccordionDivider {
-  width: 99%;
+  width: 100%;
   height: 3px;
   background: #EBEBEB;
   margin: 0 auto;
-  border-radius: 2px;
+  /* border-radius: 2px; */
   position: relative;
   top: 0;
 }
